--- a/app/assets/css/color-tokens.css
+++ b/app/assets/css/color-tokens.css
@@ -13,10 +13,12 @@
 
    /* Buttons */
    --color-button-background-primary: #D71921;
+   --color-button-background-primary-hover: #a01218;
    --color-button-text-primary: #FFF;
 
 
    --color-button-background-secondary: #FFF;
+   --color-button-background-secondary-hover: #efefef;
    --color-button-text-secondary: #2c2426;
    --color-button-border-secondary: #CCC;
 }
