--- a/app/assets/css/utils.css
+++ b/app/assets/css/utils.css
@@ -3,3 +3,13 @@
    margin-inline: auto;
    width: 90%;
 }
+
+.u-visually-hidden {
+   clip: rect(0 0 0 0);
+   clip-path: inset(50%);
+   height: 1px;
+   overflow: hidden;
+   position: absolute;
+   white-space: nowrap;
+   width: 1px;
+}
