--- a/app/_assets/css/font-tokens.css
+++ b/app/_assets/css/font-tokens.css
@@ -1,6 +1,31 @@
 :root {
-   --ff-primary: var(--font-geist);
-   --ff-secondary: "Stack Sans Headline";
-   --ff-fancy: "Stack Sans Notch";
-   --ff-mono: var(--font-geist-mono);
+    /* Font Family */
+    --ff-primary: var(--font-geist);
+    --ff-secondary: "Stack Sans Headline";
+    --ff-fancy: "Stack Sans Notch";
+    --ff-mono: var(--font-geist-mono);
+
+    /* Line Height */
+    --font-line-height-loose: 200%;
+    --font-line-height-relaxed: 170%;
+    --font-line-height-comfy: 140%;
+    --font-line-height-tight: 120%;
+    --font-line-height-default: 100%;
+
+    /* Font Weight */
+    --font-weight-bold: 700;
+    --font-weight-medium: 500;
+    --font-weight-regular: 400;
+
+    /* Font size */
+    --font-size-12: .75rem;
+    --font-size-14: .875rem;
+    --font-size-16: 1rem;
+    --font-size-18: 1.125rem;
+    --font-size-20: 1.25rem;
+    --font-size-22: 1.375rem;
+    --font-size-24: 1.5rem;
+    --font-size-32: 2rem;
+    --font-size-48: 3rem;
+    --font-size-64: 4rem;
 }
