--- a/app/_assets/css/base.css
+++ b/app/_assets/css/base.css
@@ -1,3 +1,4 @@
+/* stylelint-disable selector-max-type */
 body {
    color: var(--color-text-neutral-default);
    background-color: var(--color-background-neutral-default);
@@ -5,3 +6,4 @@ body {
    min-height: 100dvh;
    line-height: 1.5;
 }
+/* stylelint-enable selector-max-type */
