--- a/app/_assets/css/reset.css
+++ b/app/_assets/css/reset.css
@@ -1,3 +1,4 @@
+/* stylelint-disable selector-max-type */
 *,
 *::before,
 *::after {
@@ -29,29 +30,18 @@ select {
 
 button {
    padding: 0;
-   border: 0;
    border-radius: 0;
    font: inherit;
    color: inherit;
-   border: 1px solid currentColor;
    background-color: transparent;
    cursor: pointer;
    touch-action: manipulation;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+   border: 0;
 }
 
 a {
    color: inherit;
    text-decoration: none;
 }
-
-@media (prefers-reduced-motion: reduce) {
-   *,
-   *::before,
-   *::after {
-      animation-duration: 0.01ms !important;
-      animation-iteration-count: 1 !important;
-      transition-duration: 0.01ms !important;
-      scroll-behavior: auto !important;
-   }
-}
+/* stylelint-enable selector-max-type */
