--- a/app/_assets/css/utils.css
+++ b/app/_assets/css/utils.css
@@ -1,7 +1,8 @@
 .u-max-content-width {
    max-width: 75rem;
    margin-inline: auto;
-   width: 90%;
+   width: 100%;
+   padding-inline: 1rem;
 }
 
 .u-visually-hidden {
